--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "name": "vers"
         }
     ],
-    "minimum-stability": "1.0.1",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=8.2"
     },
